force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/Opportunity_LI_Monthly_Booking__c.object-meta.xml
<CustomObject>
    <description>Helper object that allows to break down payments in monthly intervals.</description>
    <label>Monatsbuchung</label>
    <nameField>
        <displayFormat>MB-{000000}</displayFormat>
        <label>Opportunity_LI_Monthly_Booking-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monatsbuchungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>