force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/fields/Leistungsenddatum__c.field-meta.xml
<CustomField>
    <fullName>Leistungsenddatum__c</fullName>
    <label>Leistungsenddatum</label>
    <type>Date</type>
</CustomField>