force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>month in which pro rate payment is due.</description>
    <label>Monat</label>
    <type>Date</type>
</CustomField>