force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/fields/Opp_is_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Opp_is_Closed_Won__c</fullName>
    <formula>ISPICKVAL(Opportunity__r.StageName, &#39;Closed Won&#39;)</formula>
    <label>Opp is Closed Won</label>
    <type>Checkbox</type>
</CustomField>