force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Monatsbuchungen</relationshipLabel>
    <relationshipName>Monatsbuchungen</relationshipName>
    <type>Lookup</type>
</CustomField>