force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/fields/OpportunityLineItem_ID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem_ID__c</fullName>
    <label>Opportunity Line Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>