force-app/main/default/objects/Opportunity_LI_Monthly_Booking__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Monatsbuchungen</relationshipLabel>
    <relationshipName>Monatsbuchungen</relationshipName>
    <type>Lookup</type>
</CustomField>